[metadata]
name = pygeoshape
version = 0.0.1
author = Marc Brittain
author_email = marcbrittain@yahoo.com
description = A 3D geospatial package to make working with geographical data easier in python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/marcbrittain/PyGeoShape
project_urls =
    Bug Tracker = https://github.com/marcbrittain/PyGeoShape/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD-3-Clause License
    Operating System :: OS Independent

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.6
install_requires =
    shapely
    matplotlib
    numpy
    pyproj


[options.packages.find]
where = .
